# sentinelmark

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  Railway.toml  SECURITY.md  audit.toml  docker-compose.yml  package-lock.json  recover.py
.github/: cliff.toml
.github/workflows/: backend.yml  frontend.yml  publish-go.yml  publish-node.yml  publish-python.yml  publish-rust.yml  release.yml  sdk-go.yml  sdk-node.yml  sdk-python.yml  sdk-rust.yml  security.yml
core-rs/: Cargo.toml
core-rs/benches/: chain_integrity.rs  serialization_overhead.rs  verification_throughput.rs  watermark_derivation.rs
core-rs/src/: lib.rs
core-rs/src/chain/: mod.rs
core-rs/src/telemetry/: mod.rs
core-rs/src/transport/: mod.rs
core-rs/src/verifier/: replay.rs
core-rs/tests/: bew_integration.rs  transport_integration.rs
crates/audit-engine/: Cargo.toml
crates/audit-engine/src/: lib.rs
crates/behavior-engine/: Cargo.toml
crates/behavior-engine/src/: lib.rs
crates/context-engine/: Cargo.toml
crates/context-engine/src/: lib.rs
crates/explainability-engine/: Cargo.toml
crates/explainability-engine/src/: lib.rs
crates/identity-engine/: Cargo.toml
crates/identity-engine/src/: lib.rs
crates/policy-engine/: Cargo.toml
crates/policy-engine/src/: lib.rs  tests.rs
crates/risk-engine/: Cargo.toml
crates/risk-engine/src/: lib.rs
crates/sentinelmark-core/: Cargo.toml
crates/sentinelmark-core/src/: lib.rs
crates/storage-engine/: Cargo.toml
crates/storage-engine/migrations/: 20260624000000_init_schema.sql
crates/storage-engine/src/: lib.rs
crates/telemetry-engine/: Cargo.toml
crates/telemetry-engine/src/: lib.rs
crates/trust-engine/: Cargo.toml
crates/trust-engine/src/: lib.rs
crates/workflow-engine/: Cargo.toml
crates/workflow-engine/src/: lib.rs
docs/: ATTACK_MODEL.md  Authentication.md  BEHAVIORAL_ANALYSIS.md  Compatibility_Matrix.md  Disaster_Recovery.md  EXPERIMENTAL_METHOD.md  Errors.md  Events.md  FORENSIC_EVALUATION.md  Getting_Started.md  Idempotency.md  Rate_Limits.md  TRUST_PIPELINE.md
examples/attack-scenarios/: Cargo.toml
examples/attack-scenarios/src/: main.rs
examples/banking-platform/: Cargo.toml
examples/banking-platform/src/: main.rs
examples/login-security/: Cargo.toml
examples/login-security/src/: main.rs
examples/node-express/: package.json  server.js
examples/python-flask/: app.py  requirements.txt
examples/stellarflow-integration/: Cargo.toml
examples/stellarflow-integration/src/: main.rs
frontend/: Dockerfile  README.md  metadata.json  package-lock.json  package.json  recovered_page.tsx.txt  tsconfig.tsbuildinfo
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/app/(console)/: layout.tsx
frontend/app/api-explorer/: page.tsx
frontend/app/audit/: page.tsx
frontend/app/behavior/: page.tsx
frontend/app/sdk/: page.tsx
frontend/app/simulator/: page.tsx
frontend/components/: AttackReplay.tsx  AuditLedger.tsx  BehaviorProfile.tsx  CircularGauge.tsx  KPICards.tsx  ParticleBackground.tsx  Providers.tsx  Sidebar.tsx  StarBorder.tsx  TelemetryFeed.tsx  ThreatHeatmap.tsx  TrustScoreCenterpiece.tsx  TrustTimelineChart.tsx
frontend/components/charts/: SessionHeatmap.tsx  (+5 more)
frontend/hooks/: use-queries.ts
frontend/lib/: api.ts  store.ts  ws.ts
frontend/stores/: api-log-store.ts  audit-store.ts  simulator-store.ts  telemetry-store.ts  trust-store.ts  websocket-store.ts
grafana/: promtail.yml
legacy/: README.md
legacy/verify-py/: pyproject.toml
legacy/verify-py/app/: __init__.py
legacy/verify-py/app/api/: health.py
legacy/verify-py/app/db/: models.py
legacy/verify-py/app/logging/: config.py
legacy/verify-py/app/schemas/: metrics.py  verdicts.py
legacy/verify-py/app/trust/: scoring.py
legacy/verify-py/app/verification/: chain_validator.py  hkdf_verifier.py  integrity_pipeline.py  pipeline.py  watermark.py
legacy/verify-py/benchmarks/attacks/: sim_entropy_collapse.py  sim_replay.py  sim_volumetric_replay.py
legacy/verify-py/logs/: .gitkeep
migrations/: 001_initial_schema.sql  002_tenants_projects_api_keys.sql  003_product_registry_and_events.sql  004_developer_portal.sql  005_idempotency.sql  006_policy_engine.sql
postman/: SentinelMark_API_v1.postman_collection.json
prometheus/: prometheus.yml
scripts/: backup.sh  restore.sh  validate_env.sh
sdk-go/: client.go  errors.go  events.go  go.mod
sdk-node/: package-lock.json  package.json  tsconfig.json
sdk-node/examples/: evaluate.ts
sdk-node/src/: client.ts  errors.ts  index.ts
sdk-python/: pyproject.toml
sdk-python/examples/: evaluate.py
sdk-python/sentinelmark/: __init__.py  client.py  errors.py
sdk-rust/: Cargo.toml
sdk-rust/examples/: evaluate.rs
sdk-rust/src/: client.rs  error.rs  lib.rs  models.rs
sdk/sentinelmark-rs/: Cargo.toml
sdk/sentinelmark-rs/src/: lib.rs
sdks/: SPEC.md
services/api-gateway/: .env.example  Cargo.toml
services/api-gateway/benches/: trust_engine.rs
services/api-gateway/src/: config.rs  docs.rs  error.rs  main.rs  response.rs  state.rs  telemetry.rs  ws.rs
services/api-gateway/src/adapters/: mod.rs  models.rs
services/api-gateway/src/middleware/: auth.rs  mod.rs  request_id.rs
services/api-gateway/src/routes/: api_keys.rs  audit.rs  behavior_profile.rs  evaluate.rs  events.rs  events_explorer.rs  health.rs  metrics.rs  mod.rs  policies.rs  products.rs  projects.rs  team.rs  telemetry.rs  tenants.rs  usage.rs  version.rs
services/api-gateway/tests/integration/: health_check.rs
verify-py/: pyproject.toml
verify-py/app/: main.py
verify-py/app/api/: ingest.py  metrics.py
verify-py/app/behavior/: analyzer.py
verify-py/app/db/: models.py  repositories.py  session.py
verify-py/app/schemas/: telemetry.py
verify-py/app/trust/: scoring.py
verify-py/app/verification/: chain_validator.py  integrity_pipeline.py  replay_guard.py
verify-py/benchmarks/attacks/: sim_latency.py
verify-py/benchmarks/results/: .gitkeep
verify-py/data/: .gitignore
verify-py/tests/: test_verification_pipeline.py
(+60 files in other folders)
