[workspace]
members = [
    "crates/*",
    "sdk/*",
    "services/*",
    "examples/*"
]
resolver = "2"

[workspace.dependencies]
sentinelmark-core    = { path = "crates/sentinelmark-core" }
telemetry-engine     = { path = "crates/telemetry-engine" }
behavior-engine      = { path = "crates/behavior-engine" }
risk-engine          = { path = "crates/risk-engine" }
trust-engine         = { path = "crates/trust-engine" }
policy-engine        = { path = "crates/policy-engine" }
audit-engine         = { path = "crates/audit-engine" }
storage-engine       = { path = "crates/storage-engine" }
workflow-engine      = { path = "crates/workflow-engine" }
identity-engine      = { path = "crates/identity-engine" }
explainability-engine = { path = "crates/explainability-engine" }
sentinelmark-rs      = { path = "sdk/sentinelmark-rs" }

tokio            = { version = "1.37", features = ["full"] }
serde            = { version = "1.0",  features = ["derive"] }
serde_json       = "1.0"
axum             = "0.7"
sqlx             = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
tracing          = "0.1"
tracing-subscriber = "0.3"
uuid             = { version = "1.8",  features = ["v4", "serde"] }
chrono           = { version = "0.4",  features = ["serde"] }
thiserror        = "1.0"
