[workspace]
members = [
    "crates/*",
    "sdk/*",
    "services/*",
    "sdk-rust",
]
resolver = "2"

[workspace.dependencies]
sentinelmark-core    = { path = "crates/sentinelmark-core" }
telemetry-engine     = { path = "crates/telemetry-engine" }
behavior-engine      = { path = "crates/behavior-engine" }
risk-engine          = { path = "crates/risk-engine" }
trust-engine         = { path = "crates/trust-engine" }
policy-engine        = { path = "crates/policy-engine" }
audit-engine         = { path = "crates/audit-engine" }
storage-engine       = { path = "crates/storage-engine" }
sentinelmark-rs      = { path = "sdk/sentinelmark-rs" }

# Async runtime
tokio            = { version = "1.37", features = ["full"] }

# Web framework
axum             = { version = "0.7", features = ["ws", "macros"] }
tower            = { version = "0.4" }
tower-http       = { version = "0.5", features = ["cors", "trace", "compression-gzip", "timeout", "request-id", "set-header"] }
governor         = { version = "0.6" }

# Hashing
sha2             = "0.10"

# Serialization
serde            = { version = "1.0",  features = ["derive"] }
serde_json       = "1.0"

# Database
sqlx             = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "tls-rustls"] }

# Observability
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus       = { version = "0.13", features = ["process"] }
lazy_static      = "1.4"


# Types
uuid             = { version = "1.8",  features = ["v4", "serde"] }
chrono           = { version = "0.4",  features = ["serde"] }
thiserror        = "1.0"

# Configuration
dotenvy          = "0.15"

# Validation
validator        = { version = "0.18", features = ["derive"] }

# Auth
jsonwebtoken     = "9"

# OpenAPI
utoipa           = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
