[tool.poetry]
name = "sentinelmark-verify"
version = "3.0.0"
description = "Phase 3 Forensic Verification Authority for SentinelMark BEW telemetry"
authors = ["Bibek Das <bibekdas1055@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.6.0"
cryptography = "^42.0.0"
sqlalchemy = "^2.0.0"
numpy = "^1.26.0"
scipy = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
