[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sentinelmark-rs = { workspace = true }
telemetry-engine = { workspace = true }
behavior-engine = { workspace = true }
